# notes

2019.01/empty-dict/: README.md  emptydict2-opt.json  emptydict3-opt.json
2019.01/ordered-set/: set_oset.json
2019/empty-dict/: before-opt.json
2019/opcache_load_global/: README.md  master.json  opcache_load_global.json
2019/ordered-set/: bm_set.py
2020/wchar-cache/: README.md  deprecated-apis  deprecated-files  deprecated-use  download_sdist.py  package_list.txt
2022/bits/: b1.c
2022/go_escape/: bench_test.go
2022/gomysql-1344/: README.md  database.go  go.mod  main.go  mydb.py  test.py
2023/fastapi/: README.md  app.py  discuss9875.py  e1.py  minimum.py  pyproject.toml
2023/go-conncheck/: README.md  go.mod  go.sum  main.go
2023/go-int-alloc/: benchmark_test.go  go.mod
2023/go-mysql-race/: README.md  go.mod  main.go
2023/go-parseint/: README.md  go.mod  main.go
2023/go_mysql_1465/: go.mod  main.go
2023/otel-py/: README.md  bench.sh  ddtrace.out  otel-events.py  otel-sampled.out  otel-sampling.py  otel.out  pyproject.toml  script.py
2023/otel-py/src/otel_py/: __init__.py
2023/peewee2312/: README.md  pyproject.toml  sample.py
2023/small-ref/: README.md  small_ref_size.txt  type_ref_size.txt  type_small_ref.patch
2023/udpecho/: .gitignore  Makefile  go.mod
2023/udpecho/cmd/echo-client/: main.go
2023/udpecho/cmd/echo-server/: main.go
2023/udpecho/cmd/udp-proxy/: main.go
2024/flask_pymemcache/: app.py  config.py  pyproject.toml
2024/go-mysql-maxconn/: README.md  go.mod
2024/mini_traceback/: README.md  pyproject.toml  sample.py  sample_all.py  sample_mini.py
2024/mini_traceback/sub/: __init__.py
2024/otel-proto/: README.md  file_export.py  pyproject.toml
2024/otel-py39-segfault/: README.md  file2.py
2024/uwsgi-test/: README.md  go.mod
2024/zlib_speedtest/: .gitignore  README.md  compress_test.go  go.mod  main.go
2025/dictnew/: README.md  bench_new.py  bench_presized.py  dict_new.json  dict_new_312.json  dict_presized.json  dict_presized_312.json  dictbench.c  setup.py
c/first_nonascii/: README.md  main.c  nonascii.c
c/overflow/: README.md  clang-overflow.s  gcc-overflow.s  macos-overflow.s  overflow.c
go-mysql-maxconn/: fuzz_conn_test.go
otel-py39-segfault/: file.py  pyproject.toml
otel-py39-segfault/src/otel_py39_segfault/: __init__.py
python/crypto/: README.md  pyproject.toml
python/multifind/: search_multi_bench.py
python/niquests_http2/: README.md  generate_local_certs.sh  go.mod  main.go
python/ordered-set/: README.md  set_master.json
python/sqla_types/: gen.py  main.py  main_legacy.py  main_typed.py  pyproject.toml
python/sqlalchemy_readonly_close/: README.md  main.py  pyproject.toml
python/structlog_sample/: bind_sample.py  json_sample.py  logformat_bench.py  loguru_sample.py  traceback_sample.py
python/structlog_sample/src/structlog_test/: __init__.py
python/utf8bench/: README.md  bench.py  pyproject.toml
python/utf8bench/src/utf8bench/: __init__.py  ext.cpp
python/uwsgi_threadpool/: run.bash  wsgi.py
python/xorbytes/: README.md  pyproject.toml  ws_mask_bench.py  xor_bytes.py
scripts/: pycdump.py
structlog-test/: README.md  bind_sample2.py  logging_bench.py  pyproject.toml  stdlib_bench.py  traceback_sample.py
uwsgi-test/: app.py  client.go
zap/: go.mod  sample.go
