[project]
name = "structlog-test"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Inada Naoki", email = "songofacandy@gmail.com" }
]
dependencies = [
    "structlog>=24.1.0",
    "loguru>=0.7.2",
    "python-json-logger>=2.0.7",
    "py-spy>=0.3.14",
    "orjson>=3.9.15",
]
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
hello = "structlog_test:hello"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/structlog_test"]
