[project]
name = "fastapi-sandbox"
version = "0.1.0"
description = "Add a short description here"
authors = [
    { name = "Inada Naoki", email = "songofacandy@gmail.com" }
]
dependencies = ["fastapi~=0.100.0", "uvicorn[standard]~=0.22.0"]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
[tool.hatch.metadata]
allow-direct-references = true
