[project]
name = "otel-py"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Inada Naoki", email = "songofacandy@gmail.com" }
]
dependencies = [
    "opentelemetry-distro>=0.41b0",
    "ddtrace>=2.1.2",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true
