[project]
name = "mini-traceback"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Inada Naoki", email = "songofacandy@gmail.com" }
]
dependencies = [
    "sqlalchemy>=2.0.29",
    "minitraceback>=0.1.1",
]
readme = "README.md"
requires-python = ">= 3.12"

[project.scripts]
"mini-traceback" = "mini_traceback:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/mini_traceback"]
